[package]
name = "komodo"
version = "0.1.0"
authors = ["jorian"]
edition = "2018"
keywords = ["crypto", "bitcoin"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
secp256k1 = { version = "0.19.0", features = ["recovery"] }
bitcoin = "0.26.2"
bitcoin_hashes = "0.9.1"

[dependencies.serde]
version = "1"
